fix image position in collapsabel section

--- a/components/pageTheme/Collapsable/Collapsable.module.css
+++ b/components/pageTheme/Collapsable/Collapsable.module.css
@@ -160,6 +160,7 @@
     width: 550px;
     justify-self: end;
     height: auto;
+    align-self: baseline;
   }
 }
 
